--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
   <header id="hero" class="hero-section d-flex align-items-center justify-content-center text-center">
     <div class="container" data-aos="fade-up">
       <h1 class="hero-title">Giuseppe Nicola Liso</h1>
-      <p class="hero-subtitle">Math Student and successor of the Fuhrer</p>
+      <p class="hero-subtitle">Math Student</p>
       <a href="misc\CV Giuseppe Nicola Liso FORMAL.pdf" target="_blank" class="btn btn-cta mt-3" data-aos="fade-up" data-aos-delay="200">
         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-download me-2" viewBox="0 0 16 16">
           <path d="M.5 9.9a.5.5 0 0 1 .5.5v2.5a1 1 0 0 0 1 1h12a1 1 0 0 0 1-1v-2.5a.5.5 0 0 1 1 0v2.5a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2v-2.5a.5.5 0 0 1 .5-.5z"/>
