--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="col-md-6 mb-4" data-aos="fade-up" data-aos-delay="200">
           <div class="achievement-card">
             <h3 class="achievement-title">University of Trento</h3>
-            <p class="achievement-detail">Bachelor's Degree in Math (1110/110 cum laude)</p>
+            <p class="achievement-detail">Bachelor's Degree in Mathematics (1110/110 cum laude)</p>
           </div>
         </div>
         <!-- Add more achievements as cards here -->
