--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
     <div class="container">
       <div class="row align-items-center text-center text-md-start">
         <div class="col-md-4 mb-4 mb-md-0" data-aos="fade-right">
-          <img class="profile-photo img-fluid" src="misc/immagine-profilo.jpg" alt="Giuseppe Nicola Liso"/>
+          <img class="profile-photo img-fluid" src="misc/immagine_profilo.jpg" alt="Giuseppe Nicola Liso"/>
 
         </div>
         <div class="col-md-8" data-aos="fade-left">
